# wmux

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/phases/01-daemon-foundation/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-04-PLAN.md  01-04-SUMMARY.md  01-CONTEXT.md  01-VERIFICATION.md
.planning/phases/02-session-and-pane-core/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-04-PLAN.md  02-04-SUMMARY.md  02-05-PLAN.md  02-05-SUMMARY.md  02-CONTEXT.md  02-VERIFICATION.md
.planning/phases/03-configuration-and-polish/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-CONTEXT.md  03-VERIFICATION.md
docs/: index.html  promo.html
examples/: conpty_test.rs
src/: cli.rs  config.rs  lib.rs  main.rs  paths.rs  wt.rs
src/daemon/: lifecycle.rs  mod.rs  recovery.rs
src/ipc/: client.rs  protocol.rs  server.rs
src/session/: conpty.rs  manager.rs  mod.rs  pane.rs  scrollback.rs
tests/: conpty_manual_test.rs  ipc_protocol_test.rs  recovery_test.rs  scrollback_test.rs
